complist/static/complist/detail.css
.header1 {
    text-align: center;
}
.header2 {
    margin-left: 250px;
}
#c3 {
    margin-left: 90px;
}
#t3 {
    width: 500px;
}
#t3 thead tr th{
    text-align: center;
}
#t3 tbody tr td{
    text-align: center;
}
.header3 {
    margin-left: 900px;
    margin-top: -129px;
}
#c4 {
    float: right;
}
#t4 {
    width: 500px;
}
#t4 thead tr th {
    text-align: center;
}
#t4 tbody tr td {
    text-align: center;
}
.header4 {
    text-align: center;
}

